[package]
name = "redox_std"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "std"
path = "../rust/src/libstd/lib.rs"

[dependencies]
alloc_system = { path = "alloc_system" }
compiler_builtins = { path = "compiler_builtins" }
panic_abort = { path = "panic_abort" }
#panic_unwind = { path = "panic_unwind" }
libc = { path = "libc" }
unwind = { path = "unwind" }

[replace]
"libc:0.2.17" = { git = "https://github.com/rust-lang/libc.git" }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = { git = "https://github.com/redox-os/syscall.git" }

