[package]
name = "redox_std"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
build = "../rust/src/libstd/build.rs"

[lib]
name = "std"
path = "../rust/src/libstd/lib.rs"

[dependencies]
alloc_system = { path = "alloc_system" }
compiler_builtins = { path = "compiler_builtins" }
panic_abort = { path = "panic_abort" }
#panic_unwind = { path = "panic_unwind" }
libc = { path = "libc" }
unwind = { path = "unwind" }

[build-dependencies]
build_helper = { path = "../rust/src/build_helper" }
gcc = "0.3.27"
