[package]
name = "arch_x86_64"
version = "0.1.0"

[dependencies]
bitflags = "*"
hole_list_allocator = { path = "../../alloc/hole_list_allocator" }
io = { path = "../../drivers/io" }
ransid = { git = "https://github.com/redox-os/ransid.git", branch = "new_api" }
spin = "*"

[dependencies.x86]
version = "0.7.1"
default-features = false
