[package]
name = "arch_x86_64"
version = "0.1.0"

[dependencies]
bitflags = "*"
hole_list_allocator = { path = "../../crates/hole_list_allocator/" }
io = { path = "../../crates/io/" }
spin = "*"
redox_syscall = { path = "../../syscall/" }

[dependencies.x86]
version = "0.7"
default-features = false
