[package]
name = "e1000d"
version = "0.1.0"

[dependencies]
bitflags = "*"
dma = { path = "../../crates/dma/" }
event = { path = "../../crates/event/" }
io = { path = "../../crates/io/" }
netutils = { path = "../../programs/netutils/" }
redox_syscall = { path = "../../syscall/" }

[replace]
"libc:0.2.17" = { git = "https://github.com/rust-lang/libc.git" }
"rand:0.3.14" = { git = "https://github.com/rust-lang-nursery/rand.git" }
