[package]
name = "pcid"
version = "0.1.0"

[dependencies]
redox_syscall = { path = "../../syscall/" }
rustc-serialize = { git ="https://github.com/rust-lang-nursery/rustc-serialize.git" }
toml = "*"

[replace]
"rustc-serialize:0.3.19" = { git = "https://github.com/rust-lang-nursery/rustc-serialize.git" }
