[package]
name = "tcpd"
version = "0.1.0"

[dependencies]
event = { path = "../../crates/event/" }
netutils = { path = "../../programs/netutils/" }
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }
redox_syscall = { path = "../../syscall/" }

[replace]
"libc:0.2.17" = { git = "https://github.com/rust-lang/libc.git" }
