[package]

name = "num"
version = "0.1.27"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-lang/num"
repository = "https://github.com/rust-lang/num"
documentation = "http://doc.rust-lang.org/num"
keywords = ["mathematics", "numerics"]
description = """
Simple numerics. This crate contains basic arbitrary-sized integer,
rational, and complex types.
"""

[dependencies]
rand = { version = "0.3.8", optional = true }
redox = { path = "../../libredox" }

[features]

complex = []
rational = []
bigint = ["rand"]
default = ["complex", "rational", "bigint"]

[[bench]]
name = "shootout-pidigits"
harness = false
